--- a/email/email-3.html
+++ b/email/email-3.html
@@ -56,14 +56,14 @@
                         </tr>        
                         <tr>
                             <td style="padding:0;font-size:24px;line-height:28px;font-weight:bold;background-color:#f4a7bb;">
-                                <br>
-                                <br>
-                                <a style="text-decoration:none;"><img src="https://github.com/seanyyyyyy/seanyyyyyy.github.io/blob/master/img/venues/kbox.jpeg?raw=true" width="600" alt="" style="width:100%;height:auto;display:block;border:none;text-decoration:none;color:#363636;"></a>
+                                <a style="text-decoration:none;">
+                                    <img src="https://github.com/seanyyyyyy/seanyyyyyy.github.io/blob/master/img/venues/section8.jpeg?raw=true" width="600" alt="" style="width:100%;height:auto;display:block;border:none;text-decoration:none;color:#363636;">
+                                </a>
                             </td>
                         </tr>
                         <tr>
                             <td style="padding:1px 10px 30px 10px;background-color:#f4a7bb;">
-                                <h1 style="text-align:center;margin-top:0;margin-bottom:16px;font-size:50px;font-family: 'Times New Roman', Times, serif;line-height:100%;font-weight:bold;letter-spacing:-0.02em;color:#ffffff;">We think we'd look great together</h1>
+                                <h1 style="text-align:center;margin-top:0;margin-bottom:16px;font-size:55px;font-family: 'Times New Roman', Times, serif;line-height:100%;font-weight:bold;letter-spacing:-0.02em;color:#ffffff;">We think we'd look great together</h1>
                             </td>
                         </tr>
                         <tr>
@@ -99,7 +99,6 @@
                                     <img src="https://raw.githubusercontent.com/seanyyyyyy/seanyyyyyy.github.io/master/img/logo2-clear-512.png" class="img-responsive" alt="" width="60" height="60">
                                 </p>
                                 <p style="margin:0;font-size:14px;line-height:20px;">
-                                    &reg;
                                     <a class="unsub" href="https://hotspot.contact/" style="color:#cccccc;text-decoration:underline;">
                                         hotspot.contact
                                     </a>
